Exploring_Configuration_Management_in_Kubernetes/project 25/ingress.yaml
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: artifactory
# spec:
#   ingressClassName: nginx
#   rules:
#   - host: "tooling.artifactory.thesausage.online"
#     http:
#       paths:
#       - path: /
#         pathType: Prefix
#         backend:
#           service:
#             name: artifactory
#             port:
#               number: 8082

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: artifactory
  namespace: tools
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  rules:
  - host: "tooling.artifactory.thesausage.online"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: artifactory-artifactory-nginx
            port:
              number: 80
  tls:
  - hosts:
    - "tooling.artifactory.thesausage.online"
    secretName: "tooling.artifactory.thesausage.online"
