Exploring_Configuration_Management_in_Kubernetes/project 25/jenkins-ingress.yaml
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: jenkins
# spec:
#   ingressClassName: nginx
#   rules:
#   - host: "jenkins.thesausage.online"
#     http:
#       paths:
#       - path: /
#         pathType: Prefix
#         backend:
#           service:
#             name: jenkins
#             port:
#               number: 8080


apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jenkins
  namespace: tools
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  rules:
  - host: "jenkins.thesausage.online"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: jenkins
            port:
              number: 8080
  tls:
  - hosts:
    - "jenkins.thesausage.online"
    secretName: "jenkins.thesausage.online"
